plugins {
    id "java-library"
    id "maven-publish"
    id "com.gradleup.shadow" version "8.3.6"
}

group = "dev.digitality"
version = "1.0.2"
description = "DigitalConfig"

java.sourceCompatibility = JavaLanguageVersion.of(21)
java.targetCompatibility = JavaLanguageVersion.of(21)
compileJava.options.encoding = "UTF-8"

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.slf4j:slf4j-api:2.0.17"
    implementation "org.reflections:reflections:0.10.2"

    implementation "org.yaml:snakeyaml:2.4"
    implementation "com.google.code.gson:gson:2.12.1"
    implementation "org.codejive:java-properties:0.0.6"
    implementation "com.moandjiezana.toml:toml4j:0.7.2"

    compileOnly "org.projectlombok:lombok:1.18.36"
    annotationProcessor "org.projectlombok:lombok:1.18.36"
}

shadowJar {
    minimize {
        exclude dependency("org.yaml:snakeyaml:.*")
    }

    relocate "org.yaml.snakeyaml", "dev.digitality.digitalconfig.formats.yaml.snakeyaml"
    relocate "com.google.gson", "dev.digitality.digitalconfig.formats.json.gson"
    relocate "org.codejive.properties", "dev.digitality.digitalconfig.formats.properties.java_properties"
    relocate "com.moandjiezana.toml", "dev.digitality.digitalconfig.formats.toml.toml4j"

    archiveClassifier = null
}

tasks.register("sourcesJar", Jar) {
    archiveClassifier = "sources"
    from(sourceSets.main.allSource)
}

publishing {
    repositories {
        maven {
            name "goldzoneRepoPrivate"
            url "https://repo.gold-zone.cz/releases"

            credentials {
                username project.findProperty("goldzoneRepo.username") ?: System.getenv("GOLDZONE_REPO_USERNAME")
                password project.findProperty("goldzoneRepo.password") ?: System.getenv("GOLDZONE_REPO_PASSWORD")
            }

            authentication {
                basic(BasicAuthentication)
            }
        }
    }

    publications {
        maven(MavenPublication) { publication ->
            groupId = this.group
            artifactId = this.name.toLowerCase()
            version = this.version
            artifact(tasks.sourcesJar)

            from(components.shadow)
        }
    }
}